updated. new media files. problem and solution chapters

--- a/includes/config.tex
+++ b/includes/config.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{listings}
+\usepackage{float}
 \usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 \usepackage[font=small]{caption}
