--- a/includes/references.bib
+++ b/includes/references.bib
@@ -1,3 +1,10 @@
+@article{adomavicius05,
+  title={RQL: A query language for recommender systems},
+  author={Adomavicius, Gediminas and Tuzhilin, Alexander and Zheng, Rong},
+  year={2005},
+  publisher={Stern School of Business, New York University}
+}
+
 @ARTICLE{anand03,
     AUTHOR    = {Anand, Sarabjot Singh and Mobasher, Bamshad},
     TITLE     = {Intelligent Techniques for Web Personalization},
@@ -9,6 +16,24 @@
     YEAR      = {2003}
 }
 
+@MISC{apache14,
+    AUTHOR       = {{The Apache Software Foundation}},
+    HOWPUBLISHED = {http://www.apache.org/},
+    YEAR         = {1999-2014}
+}
+
+@MISC{hadoop14,
+    AUTHOR       = {{Apache Hadoop}},
+    HOWPUBLISHED = {http://hadoop.apache.org/},
+    YEAR         = {2005-2014}
+}
+
+@MISC{mahout14,
+    AUTHOR       = {{Apache Mahout}},
+    HOWPUBLISHED = {https://mahout.apache.org/},
+    YEAR         = {2009-2014}
+}
+
 @INCOLLECTION{burke07,
     AUTHOR    = {Burke, Robin},
     TITLE     = {Hybrid Web Recommender Systems},
@@ -16,6 +41,43 @@
     PAGES     = {377--408},
     PUBLISHER = {Springer Berlin Heidelberg},
     YEAR      = {2007}
+}
+
+@inproceedings{cortizo10,
+  title={An architecture for a general purpose multi-algorithm recommender system},
+  author={Cortizo, Jose C and Carrero, Francisco M and Monsalve, Borja},
+  booktitle={Workshop on the Practical Use of Recommender Systems, Algorithms and Technologies (PRSAT 2010)},
+  pages={51},
+  year={2010},
+  organization={Citeseer}
+}
+
+@MISC{easyrec14,
+    AUTHOR       = {{easyrec}},
+    HOWPUBLISHED = {http://www.easyrec.org/},
+    YEAR         = {2009-2014}
+}
+
+@book{erl08,
+  title={Soa: principles of service design},
+  author={Erl, Thomas},
+  volume={1},
+  year={2008},
+  publisher={Prentice Hall Upper Saddle River}
+}
+
+@phdthesis{fielding00,
+  title={Architectural styles and the design of network-based software architectures},
+  author={Fielding, Roy Thomas},
+  year={2000},
+  school={University of California}
+}
+
+@article{hahsler11,
+  title={recommenderlab: A Framework for Developing and Testing Recommendation Algorithms},
+  author={Hahsler, Michael},
+  journal={Nov},
+  year={2011}
 }
 
 @ARTICLE{herlocker04,
@@ -47,12 +109,39 @@
     HOWPUBLISHED = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html}
 }
 
+@article{manouselis07,
+  title={Analysis and classification of multi-criteria recommender systems},
+  author={Manouselis, Nikos and Costopoulou, Constantina},
+  journal={World Wide Web},
+  volume={10},
+  number={4},
+  pages={415--441},
+  year={2007},
+  publisher={Springer}
+}
+
 @MISC{netflix09,
-    AUTHOR       = {Netflix Inc.},
+    AUTHOR       = {{Netflix Inc.}},
     TITLE        = {Netflix Prize: \$1 Million Paid, Another Million Now Up For Grabs},
     MONTH        = sep,
     YEAR         = {2009},
     HOWPUBLISHED = {http://blog.netflix.com/2009\_09\_01\_archive.html}
+}
+
+@MISC{prudsys14,
+    AUTHOR       = {{Prudsys}},
+    TITLE        = {prudsys Realtime Decisioning Engine},
+    HOWPUBLISHED = {http://www.prudsys.de/en/solutions/rde-recommendations.html},
+    YEAR         = {2014}
+}
+
+@inproceedings{rack07,
+  title={A generic multipurpose recommender system for contextual recommendations},
+  author={Rack, Christian and Arbanowski, Stefan and Steglich, Stephan},
+  booktitle={Autonomous Decentralized Systems, 2007. ISADS'07. Eighth International Symposium on},
+  pages={445--450},
+  year={2007},
+  organization={IEEE}
 }
 
 @BOOK{ricci11,
