--- a/meta/bibl.tex
+++ b/meta/bibl.tex
@@ -2,3 +2,9 @@
 \small
 \bibliography{includes/references}
 \bibliographystyle{apalike}
+
+\nocite{apache14}
+\nocite{hadoop14}
+\nocite{mahout14}
+\nocite{easyrec14}
+\nocite{prudsys14}
